Fix spacing between li.

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,11 @@ img {
 #sidebar li {
 	list-style-type: none;
 
-	padding: 5px 0 5px 0;
+	padding: 7px 0;
+}
+
+#sidebar li:first-child {
+	padding: 18px 0 29px 0;
 }
 
 #excerpts {
